ui: fixed low contrast of search field cursor in dark schemes (issue #487)
bug id = 487

--- a/bin/app/data/gui/search_view/search_view.css
+++ b/bin/app/data/gui/search_view/search_view.css
@@ -13,7 +13,7 @@
 
 QWidget#search_box_container {
 	background: <color:search/field/background>;
-	border: none;
+	border: 2px solid <color:search/field/border>;
 	border-bottom-left-radius: 12px;
 	border-top-left-radius: 12px;
 	margin-left: 5px;
